add failOnStdErr to the deploy.yml file

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,3 +49,4 @@ jobs:
             clusterName=${{ env.CLUSTER_NAME }}
             resourceGroupName=${{ env.RESOURCE_GROUP }}
             location=${{ env.LOCATION }}
+          failOnStdErr: true
