--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,7 +46,7 @@ jobs:
           operation: create
           name: aks-deployment
           scope: resourceGroup
-          template: ${{ env.TEMPLATE_FILE }}
-          resourceGroupName: ${{ env.RESOURCE_GROUP }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          template-file: ${{ env.TEMPLATE_FILE }}
+          resource-group-name: ${{ env.RESOURCE_GROUP }}
           parameters: '{"registryName":"${{ env.REGISTRY_NAME }}","clusterName":"${{ env.CLUSTER_NAME }}","resourceGroupName":"${{ env.RESOURCE_GROUP }}","location":"${{ env.LOCATION }}"}'
-          failOnStdErr: true
